Formularios usuario, empleado y paciente

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         <p>Seleccione una opción:</p>
 
         <!-- Enlaces a Formularios -->
-        <a href="/registrar-cliente" class="btn btn-primary">Registrar Cliente</a>
+        <a href="/registrar-usuario" class="btn btn-primary">Registrar usuario</a>
         <a href="/registrar-empleado" class="btn btn-primary">Registrar Empleado</a>
         <a href="/registrar-paciente" class="btn btn-primary">Registrar Paciente</a>
     </div>
