arreglos y registrar solicitud

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,7 @@
         <a href="/registrar-usuario" class="btn btn-primary">Registrar usuario</a>
         <a href="/registrar-empleado" class="btn btn-primary">Registrar Empleado</a>
         <a href="/registrar-paciente" class="btn btn-primary">Registrar Paciente</a>
+        <a href="/registrar-solicitud" class="btn btn-primary">Registrar Paciente</a>
     </div>
 
     <!-- Bootstrap JS -->
