--- a/views/registrar-usuario.ejs
+++ b/views/registrar-usuario.ejs
@@ -74,24 +74,20 @@
             <button type="submit" class="btn btn-primary">Registrar</button>
         </form>
 
-          <!-- Toasts -->
-           <!-- TOASTS -->
-           <% if(typeof validaciones != 'undefined') { %>
-            <% validaciones.forEach( (validacion)=> { %>                 
-              <div class="toast-container">
-            <div class="toast" role="alert" aria-live="assertive" data-bs-autohide="false">
-                <div class="toast-header">
-                  <svg class="bd-placeholder-img rounded me-2" width="20" height="20" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#007aff"></rect></svg>
-                  <strong class="me-auto">¡Atención!</strong>                 
-                  <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+          <!-- Validaciones -->
+        <% if (typeof validaciones !== 'undefined') { %>
+            <% validaciones.forEach(validacion => { %>
+                <div class="toast" role="alert" aria-live="assertive" data-bs-autohide="false">
+                    <div class="toast-header">
+                        <strong class="me-auto">¡Atención!</strong>
+                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Cerrar"></button>
+                    </div>
+                    <div class="toast-body">
+                        <strong><%= validacion.msg %></strong>
+                    </div>
                 </div>
-                <div class="toast-body">
-                  <strong><%= validacion.msg %></strong> 
-                </div>
-            </div>
-              </div>              
-              <% }) %>
-          <% } %>
+            <% }); %>
+        <% } %>
 
           <!-- Alerts -->
           <!-- <% if(typeof validaciones != 'undefined') { %>
